test to see if spacing is an issue for rsvp select

--- a/client/src/RSVPSelect.css
+++ b/client/src/RSVPSelect.css
@@ -18,6 +18,7 @@
 }
 
 .rsvp-select {
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
